fixed navbar alignment and text colors, added new header to index page and short simplit description

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,7 +21,10 @@
  nav ul li{
    color: white;
  }
-
+.logo{
+  margin-top: 12px;
+  margin-left: 10px;
+}
 
 body {
     font-family: 'Josefin Sans';
