--- a/app/assets/stylesheets/page.scss
+++ b/app/assets/stylesheets/page.scss
@@ -11,6 +11,10 @@ h3{
   font-family: 'Josefin Sans';
 }
 
+p{
+  font-size: 18px;
+}
+
 div textarea.simplit-input{
     background-color: rgba(192, 192, 192, 0.2);
     border-radius: 25px;
