--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -8,7 +8,7 @@
 
 nav ul a,
 nav .brand-logo {
-  color: #444;
+  color: white;
 }
 
 p {
@@ -16,7 +16,8 @@ p {
 }
 
 .button-collapse {
-  color: #00b8d4;
+  color: white;
+  margin-right: 10px;
 }
 
 .parallax-container {
